@@ -355,8 +355,9 @@ clutter_event_free (ClutterEvent *event)
 {
   if (G_LIKELY (event))
     {
-      if (event->type == CLUTTER_LEAVE || event->type == CLUTTER_ENTER)
-	g_object_unref (event->crossing.related);
+      if ((event->type == CLUTTER_LEAVE || event->type == CLUTTER_ENTER) &&
+          event->crossing.related)
+         g_object_unref (event->crossing.related);
       g_slice_free (ClutterEvent, event);
     }
 }
