@@ -1272,21 +1272,24 @@ generate_enter_leave_events (ClutterEvent *event)
 
   if (context->motion_last_actor != motion_current_actor)
     {
-      if (context->motion_last_actor && motion_current_actor)
+      if (motion_current_actor)
         {
           ClutterEvent cev;
 
-          cev.crossing.type    = CLUTTER_LEAVE;
-          cev.crossing.time    = event->any.time;
-          cev.crossing.flags   = 0; 
-          cev.crossing.x       = event->motion.x;
-          cev.crossing.y       = event->motion.y;
-          cev.crossing.source  = context->motion_last_actor;
-          /* unref in free  */
-          cev.crossing.related = g_object_ref (motion_current_actor);
+          if (context->motion_last_actor)
+            {
+              cev.crossing.type    = CLUTTER_LEAVE;
+              cev.crossing.time    = event->any.time;
+              cev.crossing.flags   = 0; 
+              cev.crossing.x       = event->motion.x;
+              cev.crossing.y       = event->motion.y;
+              cev.crossing.source  = context->motion_last_actor;
+              /* unref in free  */
+              cev.crossing.related = g_object_ref (motion_current_actor);
 
-          g_queue_push_head (context->events_queue, 
-			     clutter_event_copy (&cev));
+              g_queue_push_head (context->events_queue, 
+                                 clutter_event_copy (&cev));
+            }
 
           cev.crossing.type    = CLUTTER_ENTER;
           cev.crossing.time    = event->any.time;
@@ -1294,7 +1297,17 @@ generate_enter_leave_events (ClutterEvent *event)
           cev.crossing.x       = event->motion.x;
           cev.crossing.y       = event->motion.y;
           cev.crossing.source  = motion_current_actor;
-          cev.crossing.related = g_object_ref (context->motion_last_actor);
+          if (context->motion_last_actor)
+            {
+              cev.crossing.related = g_object_ref (context->motion_last_actor);
+            }
+          else
+            {
+              /* the previous actor we were getting events from seems to have
+               * vanished
+               */
+              cev.crossing.related = NULL;
+            }
 
           g_queue_push_head (context->events_queue, 
 			     clutter_event_copy (&cev));
